[package]
name = "us4j"
version = "0.1.0"
authors = ["gustav"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.4.1"
dirs = "3.0"
structopt = "0.3"
url = { version = "2.1.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
